--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>PuppyBowl</title>
   </head>
   <body>
+    <nav>
+      <h1>Puppy Bowl Athletes!</h1>
+    </nav>
     <main></main>
     <script src="./script.js"></script>
   </body>
